# energy_mpc_toy

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/accelerate/: multi.yaml  single.yaml
conf/dataset/: debug.yaml  default.yaml  hotpotqa.yaml  hotpotqa_debug.yaml  natural_questions.yaml
conf/model/: debug.yaml  default.yaml
conf/training/: actuator.yaml  debug.yaml  default.yaml  phase1.yaml
dataset/: action_dataset.py  collation.py  dataset.py  energy_dataset.py  eval_dataset.py  prompts.py  trajectory_dataset.py
eval/: grader.py  harness.py
models/: action_projector.py  action_vae.py  actuators.py  agent.py  attention.py  controller.py  decoder.py  dynamics_model.py  encoder.py  energy.py  energy_model.py  flow_model.py  forward_model.py  memory.py  model.py  policy.py  predictor.py  query_embedder.py  sensors.py  utils.py
retrieval/: build_dataset.py  dataloader.py  dataset.py  download.py  index_builder.py  preprocess.py
scripts/: train.sh  train_action_vae.sh  train_actuator.sh  train_jepa.sh  train_policy.sh
tests/: test_models.py  test_retrieval.py
tools/: tools.py
training/: train.py  train_action_vae.py  train_actuator.py  train_dynamics_model.py  train_energy.py  train_energy_target.py  train_forward_model.py  train_jepa.py  train_policy.py  trainer.py
