[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-mpc-toy"
version = "0.1.0"
description = "Toy model investigating energy and MPC for retrieval" 
requires-python = ">=3.11,<3.12"

dependencies = [
    "accelerate==1.11.0",  
    "torch==2.8.0",
    "transformers==4.57.1",
    "einops==0.8.1",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "pytest==8.4.2",
    "datasets==4.2.0",
    "wandb==0.22.2",
    "matplotlib==3.10.7",
    "psutil==7.1.1",
    "tqdm==4.67.1",
    "gputil==1.4.0",
    "python-dotenv==1.1.1",
    "google-api-python-client==2.185.0",
    "polars==1.34.0",
    "peft==0.17.1",
    "jaxtyping==0.3.3",
    "setuptools==80.9.0",
    "rotary-embedding-torch==0.8.9",
]

[project.optional-dependencies]
gpu = [
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp311-cp311-linux_x86_64.whl"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
